--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,6 +17,7 @@
     "com.unity.transport": "2.1.0",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "14.0.9",
+    "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
